<resources>
    <string name="app_name">Apex_Mobile</string>
    <string name="back">BACK</string>
    <string name="level_5">Level 5</string>
    <string name="level_4">Level 4</string>
    <string name="level_3">Level 3</string>
    <string name="screen_reader">Screen Reader</string>
    <string name="level_2">Level 2</string>
    <string name="level_1">Level 1</string>
    <string name="username_is_required">Username is required</string>
    <string name="password_is_requred">Password is required</string>
    <string name="full_names_is_required">Full names is required</string>
    <string name="password_is_required">Password_is_required</string>
    <string name="school_code_is_required">School code is required</string>
    <string name="email_is_requred">Email is requred</string>
    <string name="password_does_not_match_confirmed_password">Password does not match confirmed password</string>
    <string name="articles">Articles</string>
    <string name="braille_article">Braille Article</string>
    <string name="text_to_speech">Text-To-Speech</string>
    <string name="weight_extra_bold">Weight: Extra Bold</string>
    <string name="weight_extra_black">Weight : Extra Black</string>
    <string name="braille_extension_settiings">Braille Extension Settiings</string>
    <string name="braille_translation">Braille Translation</string>
    <string name="finish">Finish</string>
    <string name="braille_resources">Braille Resources</string>
    <string name="quot_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum_quot_quot_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum_quot_quot_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum_quot_quot_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\" \"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\" \"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\" \"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="braille_translator">Braille Translator</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="braille_extention">Braille extention</string>
    <string name="imagine_you_want_to_provide_your_students_with_their_end_of_year_assessment_how_would_you_provide_the_assessment_in_braille">Imagine you want to provide your students with their end of year assessment how would you provide the assessment in braille</string>
    <string name="scenario">Scenario</string>
    <string name="play">Play</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="didn_t_have_an_account">Didn\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="kimani_wawetu">Kimani Wawetu</string>
    <string name="user_name">User Name</string>
    <string name="kimanu225">kimanu225</string>
    <string name="email">Email</string>
    <string name="kimana_gmail_com">kimana@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_254_76_854_321">+254 76 854 321</string>
    <string name="full_names">Full Names</string>
    <string name="school_code">School Code</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_with">I agree with</string>
    <string name="privacy">Privacy</string>
    <string name="and">And</string>
    <string name="policy">Policy</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="translate">Translate</string>
    <string name="paste_your_text_here">Paste your text here . . .</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="weight_black">Weight: Black</string>
</resources>