<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextToSpeech">


    <TextView
        android:id="@+id/one"
        style="@style/AppLevelText"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextToSpeech"
        android:text="@string/level_1" />

    <TextView
        android:id="@+id/two"
        style="@style/AppLevelText"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/one"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/one"
        android:text="@string/level_2" />

    <TextView
        android:id="@+id/three"
        style="@style/AppLevelText"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/one"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/two"
        android:text="@string/level_3" />

    <TextView
        android:id="@+id/four"
        style="@style/AppLevelText"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/one"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/three"
        android:text="@string/level_4" />

    <TextView
        android:id="@+id/five"
        style="@style/AppLevelText"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/one"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/four"
        android:text="@string/level_5" />

    <Button
        android:id="@+id/textBackSpeech"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/five"
        android:text="@string/back" />

    <TextView
        android:id="@+id/tvTextToSpeech"
        style="@style/AppHeadingText"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_to_speech" />

    <ImageView
        android:id="@+id/imageLayout"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_svgrepo_com" />


</androidx.constraintlayout.widget.ConstraintLayout>