<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#585656"
    tools:context=".MenuLayout">

    <TextView
        android:id="@+id/textViewBraille"
        style="@style/AppLevelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="32dp"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/multiplication" />

    <TextView
        android:id="@+id/tvCourses"
        style="@style/AppLevelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/courses"
        app:layout_constraintEnd_toEndOf="@+id/textViewBraille"
        app:layout_constraintStart_toStartOf="@+id/textViewBraille"
        app:layout_constraintTop_toBottomOf="@+id/textViewBraille" />

    <TextView
        android:id="@+id/tvArticlesMain"
        style="@style/AppLevelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/tvCourses"
        app:layout_constraintStart_toStartOf="@+id/tvCourses"
        app:layout_constraintTop_toBottomOf="@+id/tvCourses"
        android:text="@string/articles" />

    <TextView
        android:id="@+id/tvProfile"
        style="@style/AppLevelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="@+id/tvArticlesMain"
        app:layout_constraintStart_toStartOf="@+id/tvArticlesMain"
        app:layout_constraintTop_toBottomOf="@+id/tvArticlesMain" />


</androidx.constraintlayout.widget.ConstraintLayout>