<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Translator">

    <ImageView
        android:id="@+id/imageLayout"
        android:layout_width="52dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_svgrepo_com" />

    <TextView
        android:id="@+id/tvLevelRange"
        style="@style/AppHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/level_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/AppBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/braille_translator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout" />

    <TextView
        android:id="@+id/tvPaste"
        style="@style/AppBodyText"
        android:layout_width="362dp"
        android:layout_height="299dp"
        android:layout_marginTop="178dp"
        android:background="@color/cream"
        android:gravity="center"
        android:text="@string/paste_your_text_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout"
        app:layout_goneMarginTop="100dp" />

    <Button
        android:id="@+id/btnTranslate"
        style="@style/AppButton"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:layout_marginTop="42dp"
        android:text="@string/translate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPaste" />

</androidx.constraintlayout.widget.ConstraintLayout>